v/v0.0.29/2016-01-01-commands.md
---
layout: post
title: Commands
date: '2016-01-01 00:00:00 -0400'
categories: v0.0.29
---

# Commands

Each and every actions support [Promises](https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Global_Objects/Promise). Some commands requires you to be logged in.

## Contents

* [Action](2016-01-01-commands.md#action) - Send an action message on a channel. \(/me &lt;message&gt;\)
* [Ban](2016-01-01-commands.md#ban) - Ban username on channel.
* [Clear](2016-01-01-commands.md#clear) - Clear all messages on a channel.
* [Color](2016-01-01-commands.md#color) - Change the color of your username.
* [Commercial](2016-01-01-commands.md#commercial) - Run commercial on a channel for X seconds.
* [Connect](2016-01-01-commands.md#connect) - Connect to server.
* [Disconnect](2016-01-01-commands.md#disconnect) - Disconnect from server.
* [Emoteonly](2016-01-01-commands.md#emoteonly) - Enable emote-only on a channel.
* [Emoteonlyoff](2016-01-01-commands.md#emoteonlyoff) - Disable emote-only on a channel.
* [Host](2016-01-01-commands.md#host) - Host a channel.
* [Join](2016-01-01-commands.md#join) - Join a channel.
* [Mod](2016-01-01-commands.md#mod) - Mod username on channel.
* [Mods](2016-01-01-commands.md#mods) - Get list of mods on a channel.
* [Part](2016-01-01-commands.md#part) - Leave a channel.
* [Ping](2016-01-01-commands.md#ping) - Send a PING to the server.
* [R9kbeta](2016-01-01-commands.md#r9kbeta) - Enable R9KBeta on a channel.
* [R9kbetaoff](2016-01-01-commands.md#r9kbetaoff) - Disable R9KBeta on a channel.
* [Raw](2016-01-01-commands.md#raw) - Send a RAW message to the server.
* [Say](2016-01-01-commands.md#say) - Send a message on a channel.
* [Slow](2016-01-01-commands.md#slow) - Enable slow mode on a channel.
* [Slowoff](2016-01-01-commands.md#slowoff) - Disable slow mode on a channel.
* [Subscribers](2016-01-01-commands.md#subscribers) - Enable subscriber-only on a channel.
* [Subscribersoff](2016-01-01-commands.md#subscribersoff) - Disable subscriber-only on a channel.
* [Timeout](2016-01-01-commands.md#timeout) - Timeout username on channel for X seconds.
* [Unban](2016-01-01-commands.md#unban) - Unban username on channel.
* [Unhost](2016-01-01-commands.md#unhost) - End the current hosting.
* [Unmod](2016-01-01-commands.md#unmod) - Unmod user on a channel.
* [Whisper](2016-01-01-commands.md#whisper) - Send an instant message to a user.

## Action

Send an action message on a channel. \(/me &lt;message&gt;\)

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `message`: _String_ - Message \(Required\)

```javascript
client.action("channel", "Your message");
```

**Promises:**

* Resolved on message sent1
* Rejected on request timed out

1: There is no possible way to know if a message has been sent successfully unless we create two connections. This promise will **always** be resolved unless you are trying to send a message and you're not connected to server.

```javascript
client.action("channel", "Your message").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Ban

Ban username on channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `username`: _String_ - Username to ban \(Required\)

```javascript
client.ban("channel", "username");
```

**Promises:**

* Resolved on [ban\_success](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [already\_banned](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_ban\_admin](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_ban\_broadcaster](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_ban\_global\_mod](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_ban\_self](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_ban\_staff](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [usage\_ban](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.ban("channel", "username").then(function(data) {
    // data returns [channel, username]
}).catch(function(err) {
    //
});
```

## Clear

Clear all messages on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.clear("channel");
```

**Promises:**

* Resolved on [clearchat](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#clearchat) event
* Rejected on [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [usage\_clear](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.clear("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Color

Change the color of your username.

**Parameters:**

* `color`: _String_ - Color name \(Required\)

**Note:** Turbo users can change their color using hexadecimal color \(like `#000000` or `#FFFFFF`\) and non-turbo users can choose one of the following colors:

* Blue
* BlueViolet
* CadetBlue
* Chocolate
* Coral
* DodgerBlue
* Firebrick
* GoldenRod
* Green
* HotPink
* OrangeRed
* Red
* SeaGreen
* SpringGreen
* YellowGreen

```javascript
client.color("#C0C0C0");
client.color("SpringGreen");
```

**Promises:**

* Resolved on [color\_changed](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [turbo\_only\_color](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [usage\_color](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.color("#C0C0C0").then(function(data) {
    // data returns [color]
}).catch(function(err) {
    //
});
```

## Commercial

Run commercial on a channel for X seconds. Available lengths \(seconds\) are `30`, `60`, `90`, `120`, `150`, `180`.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `seconds`: _Integer_ - Commercial lengths \(Required\)

```javascript
client.commercial("channel", 30);
```

**Promises:**

* Resolved on [commercial\_success](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [bad\_commercial\_error](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [usage\_commercial](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.commercial("channel", 30).then(function(data) {
    // data returns [channel, seconds]
}).catch(function(err) {
    //
});
```

## Connect

Connect to server.

```javascript
client.connect();
```

**Promises:**

* Resolved once connected to the server1
* Rejected if disconnected from server

1: Only fire once, will not fire upon reconnection.

```javascript
client.connect().then(function(data) {
    // data returns [server, port]
}).catch(function(err) {
    //
});
```

## Disconnect

Disconnect from server.

```javascript
client.disconnect();
```

**Promises:**

* Resolved when the socket is closed
* Rejected if socket is already closed

```javascript
client.disconnect().then(function(data) {
    // data returns [server, port]
}).catch(function(err) {
    //
});
```

## Emoteonly

Enable emote-only on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.emoteonly("channel");
```

**Promises:**

* Resolved on [emote\_only\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_emote\_only\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [already\_emote\_only\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.emoteonly("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Emoteonlyoff

Disable emote-only on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.emoteonlyoff("channel");
```

**Promises:**

* Resolved on [emote\_only\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_emote\_only\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [already\_emote\_only\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.emoteonlyoff("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Host

Host a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `target`: _String_ - Channel to host \(Required\)

```javascript
client.host("channel", "target");
```

**Promises:**

* Resolved on [hosts\_remaining](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [bad\_host\_hosting](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_host\_rate\_exceeded](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [usage\_host](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.host("channel", "target").then(function(data) {
    // data returns [channel, target]
}).catch(function(err) {
    //
});
```

## Join

Join a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.join("channel");
```

**Promises:**

* Resolved on [USERSTATE](https://github.com/justintv/Twitch-API/blob/master/IRC.md#userstate-1)
* Rejected on request timed out

```javascript
client.join("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Mod

Mod username on channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `username`: _String_ - Username to add as a moderator \(Required\)

```javascript
client.mod("channel", "username");
```

**Promises:**

* Resolved on [mod\_success](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_mod](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_mod\_banned](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_mod\_mod](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.mod("channel", "username").then(function(data) {
    // data returns [channel, username]
}).catch(function(err) {
    //
});
```

## Mods

Get list of mods on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.mods("channel");
```

**Promises:**

* Resolved on [room\_mods](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or [no\_mods](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_mods](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.mods("channel").then(function(data) {
    // data returns [moderators]
}).catch(function(err) {
    //
});
```

## Part

Leave a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.part("channel");
```

**Promises:**

* Resolved on leaving a channel
* Rejected on request timed out

```javascript
client.part("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Ping

Send a PING to the server.

```javascript
client.ping();
```

**Promises:**

* Resolved on [PONG](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#pong) received
* Rejected on request timed out

```javascript
client.ping().then(function(data) {
    // data returns [latency]
}).catch(function(err) {
    //
});
```

## R9kbeta

Enable R9KBeta on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.r9kbeta("channel");
```

**Promises:**

* Resolved on [r9k\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_r9k\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [already\_r9k\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.r9kbeta("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## R9kbetaoff

Disable R9KBeta on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.r9kbetaoff("channel");
```

**Promises:**

* Resolved on [r9k\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_r9k\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [already\_r9k\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.r9kbetaoff("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Raw

Send a RAW message to the server.

**Parameters:**

* `message`: _String_ - Message to send to the server \(Required\)

```javascript
client.raw("CAP REQ :twitch.tv/tags");
```

**Promises:**

* Resolved on message sent
* Rejected on request timed out

```javascript
client.raw("CAP REQ :twitch.tv/tags").then(function(data) {
    // data returns [message]
}).catch(function(err) {
    //
});
```

## Say

Send a message on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `message`: _String_ - Message \(Required\)

```javascript
client.say("channel", "Your message");
```

**Promises:**

* Resolved on message sent1
* Rejected on request timed out

1: There is no possible way to know if a message has been sent successfully unless we create two connections. This promise will **always** be resolved unless you are trying to send a message and you're not connected to server.

```javascript
client.say("channel", "Your message").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Slow

Enable slow mode on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `length`: _Integer_ - Length in seconds \(Optional, default is 300\)

```javascript
client.slow("channel", 300);
```

**Promises:**

* Resolved on [ROOMSTATE](https://github.com/justintv/Twitch-API/blob/master/IRC.md#roomstate-1)
* Rejected on [usage\_slow\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.slow("channel", 300).then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Slowoff

Disable slow mode on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.slowoff("channel");
```

**Promises:**

* Resolved on [ROOMSTATE](https://github.com/justintv/Twitch-API/blob/master/IRC.md#roomstate-1)
* Rejected on [usage\_slow\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.slowoff("channel", 300).then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Subscribers

Enable subscriber-only on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.subscribers("channel");
```

**Promises:**

* Resolved on [subs\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_subs\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [already\_subs\_on](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.subscribers("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Subscribersoff

Disable subscriber-only on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.subscribersoff("channel");
```

**Promises:**

* Resolved on [subs\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_subs\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [already\_subs\_off](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.subscribersoff("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Timeout

Timeout username on channel for X seconds.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `username`: _String_ - Username to timeout \(Required\)
* `length`: _Integer_ - Length in seconds \(Optional, default is 300\)

```javascript
client.timeout("channel", "username", 300);
```

**Promises:**

* Resolved on [timeout\_success](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_timeout](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_timeout\_admin](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_timeout\_broadcaster](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_timeout\_global\_mod](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_timeout\_self](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_timeout\_staff](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.timeout("channel", "username", 300).then(function(data) {
    // data returns [channel, username, seconds]
}).catch(function(err) {
    //
});
```

## Unban

Unban username on channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `username`: _String_ - Username to unban \(Required\)

```javascript
client.unban("channel", "username");
```

**Promises:**

* Resolved on [unban\_success](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_unban](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_unban\_no\_ban](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.unban("channel", "username").then(function(data) {
    // data returns [channel, username]
}).catch(function(err) {
    //
});
```

## Unhost

End the current hosting. You must be the broadcaster or an editor.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)

```javascript
client.unhost("channel");
```

**Promises:**

* Resolved on [HOSTTARGET](https://github.com/justintv/Twitch-API/blob/master/IRC.md#hosttarget)
* Rejected on [usage\_unhost](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [not\_hosting](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.unhost("channel").then(function(data) {
    // data returns [channel]
}).catch(function(err) {
    //
});
```

## Unmod

Unmod user on a channel.

**Parameters:**

* `channel`: _String_ - Channel name \(Required\)
* `username`: _String_ - Username to unmod \(Required\)

```javascript
client.unmod("channel", "username");
```

**Promises:**

* Resolved on [unmod\_success](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice)
* Rejected on [usage\_unmod](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [bad\_unmod\_mod](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice), [no\_permission](https://github.com/Coder-Tavi/docs/tree/b97a887ff5f09ed9c6e5c522b4745d440e8f5ad6/_posts/v0.0.29/Events.md#notice) or request timed out

```javascript
client.unmod("channel", "username").then(function(data) {
    // data returns [channel, username]
}).catch(function(err) {
    //
});
```

## Whisper

Send an instant message to a user.

**Parameters:**

* `username`: _String_ - Username \(Required\)
* `message`: _String_ - Message \(Required\)

```javascript
client.whisper("username", "Your message");
```

**Promises:**

* Resolved on message sent1
* Rejected on request timed out

1: There is no possible way to know if a message has been sent successfully unless we create two connections. This promise will **always** be resolved unless you are trying to send a message and you're not connected to server.

```javascript
client.whisper("username", "Your message").then(function(data) {
    // data returns [username, message]
}).catch(function(err) {
    //
});
```

